tests/NormalTests/paczka1/fuzzy1/11135236.err
Error in line 21: vUOSUFAULk S156 262,1
Error in line 32: S673 S426 28,2
Error in line 33: RRB4hh9kxGl S156 32,5
